[project]
name = "two-torial"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "click==8.2.1",                                     # Pinned due to recent versions breaking hot reload during development
  "fontawesome-markdown>=0.2.6",
  "mkdocs>=1.6.1",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "mkdocs-material>=9.6.21",
]
